attempt to scroll z-index fix

--- a/imports/admin/_agenda_toolbar.scss
+++ b/imports/admin/_agenda_toolbar.scss
@@ -14,7 +14,7 @@
     background: rgba($slate, 1);
     padding: 10px;
     position: relative;
-    z-index: 1;
+    z-index: 2;
     @include border-top-radius(2px);
     @include box-sizing(border-box);
     @include pie-clearfix;
@@ -25,7 +25,7 @@
       position: absolute;
       right: 0;
       width: 100%;
-      z-index: 1;
+      z-index: 2;
     }
     @media screen and (max-width: 500px) {
       bottom: 0;
